<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FFFFFF"
    android:backgroundTint="@color/white"
    android:textSize="20sp"
    tools:context=".RecipeNoteAddUpdateActivity">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_box"
            android:layout_marginTop="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_header"
                android:padding="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_name"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="20sp"
                    android:textColor="#3E5481"
                    android:id="@+id/tv_name" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_content"
                android:layout_below="@id/name_header"
                android:padding="10dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_edittext"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="20sp"
                        android:hint="@string/enter_food_name"
                        android:textColorHint="#9FA5C0"
                        android:textColor="@color/mainText"
                        android:background="@drawable/border_solid" />

                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/desc_box"
            android:layout_below="@+id/name_box">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/desc_header"
                android:padding="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="#3E5481"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/desc_content"
                android:layout_below="@id/desc_header"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/desc_edittext"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/edt_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:minLines="3"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="20sp"
                        android:textColor="@color/mainText"
                        android:hint="@string/tell_us_a_little_about_your_food"
                        android:textColorHint="#9FA5C0"
                        android:background="@drawable/border_solid" />

                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ingredients_box"
            android:layout_below="@+id/duration_box">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ingredients_header"
                android:padding="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="20sp"
                    android:textColor="#3E5481"
                    android:id="@+id/tv_ingredients" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ingredients_content"
                android:layout_below="@id/ingredients_header"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ingredients_edittext"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/edt_ingr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:hint="@string/enter_ingredient"
                        android:minLines="6"
                        android:textColor="@color/mainText"
                        android:textColorHint="#9FA5C0"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="20sp"
                        android:background="@drawable/border_solid" />

                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/steps_box"
            android:layout_below="@+id/ingredients_box">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/steps_header"
                android:padding="10dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/steps"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="20sp"
                    android:textColor="#3E5481"
                    android:id="@+id/tv_steps" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/steps_content"
                android:layout_below="@id/steps_header"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/steps_edittext"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/edt_step"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="20sp"
                        android:hint="@string/tell_us_the_steps"
                        android:textColorHint="#9FA5C0"
                        android:textColor="@color/mainText"
                        android:minLines="6"
                        android:background="@drawable/border_solid" />

                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/footer_page"
            android:layout_below="@+id/steps_box"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_next"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:background="@drawable/button_next">
                <TextView
                    android:id="@+id/btn_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/upload"
                    android:textSize="20sp"
                    android:fontFamily="@font/inter_bold"
                    android:textAlignment="center"
                    android:padding="20dp" />
            </LinearLayout>
        </RelativeLayout>
    </TableLayout>
</ScrollView>