<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".MainActivity">
    <TextView
        android:layout_marginVertical="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/inter_bold"
        android:text="@string/welcome_to"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <TextView
        android:layout_marginVertical="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/caveat"
        android:text="@string/cookpedia"
        android:textAlignment="center"
        android:textColor="#FABA64"
        android:textSize="64sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/inter_medium"
        android:text="continue with"
        android:textAlignment="center"
        android:textColor="#9FA5C0"
        android:layout_marginVertical="8dp"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/loginGoogle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/button_google"
        android:gravity="center"
        android:clickable="true"
        android:paddingVertical="16dp"
        android:paddingHorizontal="64dp"
        android:layout_marginVertical="16dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxHeight="25dp"
            android:maxWidth="25dp"
            android:textColor="@color/button_login_google"
            android:scaleType="fitCenter"
            android:src="@drawable/icons8_google_32" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_bold"
            android:text="@string/google"
            android:textAlignment="center"
            android:textColor="@color/button_login_google"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>